# CppStaticInitializationSandbox

./: CMakeLists.txt  main.cpp
libA/: CMakeLists.txt  a.cpp  a.h
